Worked on header

--- a/index.html
+++ b/index.html
@@ -14,14 +14,35 @@
 	<body>
 		<!--Header-->
 		<section id="header">
+			<div id="left-header">
+				<div id="header-container">
+					<div id="header_name">
+						Charles Hager
+					</div>
+					<div id="header_descriptor">
+						student &#160; | &#160; developer
+					</div>
+				</div>
+			</div>
+			<div id="right-header">
+			</div>
 		</section>
 
 		<!--Body-->
 		<section id="body">
+			<div id="ul-body">
+			</div>
+			<div id="ur-body">
+			</div>
+			<div id="ml-body">
+			</div>
+			<div id="mr-body">
+			</div>
 		</section>
 
 		<!--Footer-->
 		<section id="footer">
+			<p> Hi </p>
 		</section>
 	</body>
 </html>
