Finished header and added DEBUG css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 				</div>
 			</div>
 			<div id="right-header">
+				<ul id="menu">
+					<a href="mailto:clhager@berkeley.edu" target="_blank"><li> email </li></a>
+					<a href="https://www.linkedin.com/in/charles-hager-914b54135/" target="_blank"><li> linkedIn </li></a>
+					<a href="https://github.com/clhager?tab=repositories" target="_blank"><li> github </li></a>
+				</ul>
 			</div>
 		</section>
 
@@ -42,7 +47,37 @@
 
 		<!--Footer-->
 		<section id="footer">
-			<p> Hi </p>
+			<div>
+				&copy; <span id="current-year"></span> Charles Hager. All rights reserved.
+			</div>
+			<script>
+					document.getElementById("current-year").innerHTML = new Date().getFullYear();
+			</script>
 		</section>
 	</body>
 </html>
+
+
+<!--
+
+	<section id="header">
+			<div id="left-header">
+				<div id="header-container">
+					<div id="header_name">
+						Charles Hager
+					</div>
+					<div id="header_descriptor">
+						student &#160; | &#160; developer
+					</div>
+				</div>
+			</div>
+			<div id="right-header">
+				<ul id="menu">
+				    <a href="mailto:clhager@berkeley.edu" target="_blank"><li> email </li></a>
+					<a href="https://www.linkedin.com/in/charles-hager-914b54135/" target="_blank"><li> linkedIn </li></a>
+					<a href="https://github.com/clhager?tab=repositories" target="_blank"><li> github </li></a>
+				</ul>
+			</div>
+		</section>
+
+-->
